# document-search

./: .gitignore  ARCHITECTURE.md  DocumentSearchEngine.py  DocumentSearchEngine2.py  IMPLEMENTATION_SUMMARY.md  README.md  chonkie_ex.py  demo_chunking.py  pyproject.toml  qdrant_status.py  test_chonkie_chunking.py  test_integration.py  test_qdrant.py
qdrant_storage/: raft_state.json
