[project]
name = "document_project"
version = "0.1.0"
description = "Document search and conversion project"
dependencies = [
    "chonkie>=1.3.1",
    "docling",
    "icontract>=2.7.1",
    "kaggle>=1.7.4.5",
    "loguru>=0.7.3",
    "nltk>=3.9.2",
    "qdrant-client>=1.15.1",
    "sentence-transformers>=5.1.1",
    "siglib>=0.1.0",
    "streamlit>=1.50.0",
    "transformers>=4.57.0",
]
